<resources>
    <string name="app_name">MyMoneyManager</string>
    <string name="hint_login_username">Enter your username</string>
    <string name="hint_login_password">Enter your password</string>
    <string name="hint_login_button">Continue</string>
    <string name="exit_from_app">Press Back again to Exit.</string>
    <string name="dialog_username_title">Enter Your Username</string>
    <string name="dialog_username_message">Please Enter Your Username</string>
    <string name="dialog_password_title">Enter Your Password</string>
    <string name="dialog_password_message">Please Enter Your Password</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_invalid_username_error">Error</string>
    <string name="dialog_invalid_username_message">Invalid Username or password</string>
    <string name="correct_username">Patrik64</string>
    <string name="correct_password">patrik</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_savings">Savings</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="euro_sign">€</string>
    <string name="living">Living</string>
    <string name="internet">Internet</string>
    <string name="phone">Phone(Orange)</string>
    <string name="food">Food</string>
    <string name="living_price">155 €</string>
    <string name="internet_price">15 €</string>
    <string name="mobile_price">20 €</string>
    <string name="food_price">280 €</string>
    <string name="money_saved">400</string>
    <string name="income_price">910 €</string>
    <string name="outcome_price">470 €</string>
    <string name="vouchers">Vouchers</string>
    <string name="savings_title">Savings</string>
    <string name="savings_message">Are you sure you want to add 400€ to savings?</string>
    <string name="savings_yes">Yes</string>
    <string name="savings_no">No</string>
    <string name="tr_card">Tr Card</string>
    <string name="lunch">Lunch</string>
    <string name="cafeteria_points">Cafeteria</string>
    <string name="value_saved_positive">Value has been saved</string>
    <string name="value_saved_negative">Please enter a number</string>
    <string name="input_lunch_cafeteria">Enter a value of spent money</string>
    <string name="shop">Shopping</string>
</resources>
